--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = 
+            Wire
+            SPI
+            adafruit/Adafruit GPS Library@^1.7.1
